build: adding debug execution and component inspector